--- a/getfedora.org/data/content/cloud/index.html
+++ b/getfedora.org/data/content/cloud/index.html
@@ -5,7 +5,7 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../templates/master.html" />
   <head>
-    <title>${_('Fedora Cloud')}</title>
+    <title>${_('Fedora Atomic')}</title>
   </head>
   <body id="cloud">
 
