--- a/getfedora.org/data/content/cloud/download/index.html
+++ b/getfedora.org/data/content/cloud/download/index.html
@@ -275,20 +275,27 @@
 
     <div class="col-md-3 col-xs-12 col-md-offset-1 top-margin">
         <h3>${_('Other Downloads')}</h3>
-        <p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/Cloud/x86_64/images/Fedora-Cloud-Base-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.i386.qcow2">${_('Atomic Host ISO image (${SIZE})')}</a></p>
-        <p>
-          ${_('Base Images:')}
-          <ul>
-            <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/Cloud/i386/images/Fedora-Cloud-Base-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.i386.qcow2">${_('Qcow2 Image (${SIZE})')}</a></p></li>
-            <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/Cloud/i386/images/Fedora-Cloud-Base-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.i386.raw.xz">${_('Raw Image (${SIZE})')}</a></p></li>
-          </ul>
-        </p>
-        <p>
-          ${_('Docker:')}
-          <ul>
-            <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/Cloud/i386/images/Fedora-Cloud-Base-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.i386.qcow2">${_('Docker Image (${SIZE})')}</a></p></li>
-          </ul>
-        </p>
+          <p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/Cloud/x86_64/images/Fedora-Cloud-Base-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.i386.qcow2">${_('Atomic Host ISO image (${SIZE})')}</a></p>
+          <p>
+            ${_('Base Images:')}
+            <ul>
+              <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/Cloud/i386/images/Fedora-Cloud-Base-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.i386.qcow2">${_('Qcow2 Image (${SIZE})')}</a></p></li>
+              <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/Cloud/i386/images/Fedora-Cloud-Base-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.i386.raw.xz">${_('Raw Image (${SIZE})')}</a></p></li>
+            </ul>
+          </p>
+          <p>
+            ${_('Docker:')}
+            <ul>
+              <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/Cloud/i386/images/Fedora-Cloud-Base-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.i386.qcow2">${_('Docker Image (${SIZE})')}</a></p></li>
+            </ul>
+          </p>
+        <div class="top-space bottom-margin"><h4>${_('Resources')}</h4></div>
+          <p><i class="fa fa-fw fa-sm header-icon fa-globe"></i>${Markup(_('&lt;a href="//docs.fedoraproject.org/release-notes"&gt;&lt;strong&gt;Project Atomic: Getting Started&lt;/strong&gt;&lt;/a&gt;'))}</p>
+          <div class="pull-right bottom-step"><p>${_('Documentation on getting started using Project Atomic / Atomic Host.')}</p></div>
+          <p><i class="fa fa-fw fa-sm header-icon fa-envelope-o"></i>${Markup(_('&lt;a href="//docs.fedoraproject.org/install-guide"&gt;&lt;strong&gt;Project Atomic: Mailing List&lt;/strong&gt;&lt;/a&gt;'))}</p>
+          <div class="pull-right bottom-step"><p>${Markup(_('Join the upstream mailing list at &lt;a href="%s"&gt;atomic@projectatomic.io&lt;/a&gt;.') % ('mailto:atomic@projectatomic.io'))}</p></div>
+          <p><i class="fa fa-fw fa-sm header-icon fa-comments-o"></i>${Markup(_('&lt;a href="%(commonbugs_url)s"&gt;&lt;strong&gt;Project Atomic: IRC Chat&lt;/strong&gt;&lt;/a&gt;') % {'commonbugs_url': 'https://fedoraproject.org/wiki/Common_F%s_bugs' % (global_variables.release['next_id'])})}</p>
+          <div class="pull-right bottom-margin"><p>${Markup(_('Join the Project Atomic chat on &lt;strong&gt;#atomic&lt;/strong&gt;&lt;/a&gt; on &lt;strong&gt;irc.freenode.org&lt;/strong&gt;&lt;/a&gt;.'))}</p></div>
           <div class="top-space bottom-margin">
             <py:choose>
             <py:when test="global_variables.release['curr_state'] == 'Alpha'">
