add an alternate header - with some css more

--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -12,8 +12,9 @@
   <xi:include href="../../templates/alt/header.html" />
 
   <header id="head">
-    <div class="col-xs-12 text-center widewrapper">
-      <img src="${path}/static/images/screenshots/screenshot-cinnamon.jpg" class="img-responsive" alt="Cinnamon Screenshot" />
+    <div class="col-xs-12 text-center widewrapper bluebox">
+      <h1>${_('Alternate Architectures')}</h1>
+      <p>${_('Additional architectures supported by Fedora')}</p>
     </div>
     <div class="container product-feature">
       <div class="row">
