add navigation bar for alternate arches

--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -16,13 +16,22 @@
       <h1>${_('Alternate Architectures')}</h1>
       <p>${_('Additional architectures supported by Fedora')}</p>
     </div>
-    <div class="container product-feature">
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 text-justify top-space bottom-space">
-          <p>${_('Cinnamon is a Linux desktop which provides advanced innovative features and a traditional user experience. The desktop layout is similar to Gnome 2. The underlying technology is forked from Gnome Shell. The emphasis is put on making users feel at home and providing them with an easy to use and comfortable desktop experience.')}</p>
-          <p>${_('Cinnamon is a popular desktop alternative to Gnome 3 and this spin provides the option to quickly try and install this desktop.')}</p>
-        </div>
-      </div>
+    <div class="col-xs-12 text-center product-feature darkbluebox">
+    	<div class="col-xs-12 col-sm-4 col-lg-2 col-lg-offset-3">
+	      <div class="text-center border">
+	        <p><a href="#aarch64">${_('ARM aarch64 Architecture')}</a></p>
+	      </div>
+    	</div>
+	    <div class="col-xs-12 col-sm-4 col-lg-2">
+	      <div class="text-center border">
+	        <p><a href="#ppc">${_('PowerPC Architecture')}</a></p>
+	      </div>
+	    </div>
+	    <div class="col-xs-12 col-sm-4 col-lg-2">
+	      <div class="text-center">
+	        <p><a href="#s390x">${_('s390x Architecture')}</a></p>
+	      </div>
+	    </div>
     </div>
   </header>
 
